--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"/>
-
+        android:theme="@style/AppTheme">
+        <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="@string/AIzaSyDc5duXkkmX4SyGUW6WNEY7DX06WhUEJFE" />
 
 
         <!--
@@ -20,9 +22,6 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/AIzaSyDc5duXkkmX4SyGUW6WNEY7DX06WhUEJFE" />
         <activity android:name=".PersonalStatisticsActivity"/>
         <activity android:name=".RunRouteActivity" />
         <activity android:name=".RouteOverviewActivity" />
@@ -35,6 +34,5 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <application/>
+    </application>
 </manifest>
-
