--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.routeplanner">
+
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,8 +16,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -22,10 +27,12 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/AIzaSyDc5duXkkmX4SyGUW6WNEY7DX06WhUEJFE" />
+            android:value="@string/google_maps_key" />
 
-
-        <activity android:name=".PersonalStatisticsActivity"/>
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".PersonalStatisticsActivity" />
         <activity android:name=".RunRouteActivity" />
         <activity android:name=".RouteOverviewActivity" />
         <activity android:name=".PrepareRunActivity" />
@@ -38,5 +45,5 @@
             </intent-filter>
         </activity>
     </application>
-</manifest>
 
+</manifest>
